--- a/Introducao-Angular/1/Aula1/src/index.html
+++ b/Introducao-Angular/1/Aula1/src/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Aula1</title>
+  <title>Aula 1 - Angular</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
 </head>
 <body>
   <app-root></app-root>
 </body>
 </html>
+ 
